# chimera-lm

./: .gitignore  POSTMORTEM.md  README.md  mkdocs.yml  pyproject.toml  repro.sh
.github/workflows/: ci.yml  docs.yml
chimera/: THINK.md  __init__.py  baselines.py  cache.py  losses.py  model.py
chimera/data/: __init__.py  synthetic.py
chimera/modules/: __init__.py  attention.py  chimera_block.py  ffn.py  flash_attn_wrapper.py  mamba2_wrapper.py  rope.py  router.py  ssm.py
chimera/utils/: profiling.py
docs/: architecture.md  index.md  kv_cache.md  postmortem.md  quickstart.md  routing.md  think.md
docs/decisions/: ADR-001-cache-resolution.md  ADR-002-toy-ssm-substitution.md
docs/experiments/: nano_report.md
docs/lit/: 01_gu_dao_2023_mamba.md  02_dao_gu_2024_mamba2_ssd.md  03_lieber_2024_jamba.md  04_glorioso_2024_zamba_ren_2024_samba.md  05_raposo_2024_mixture_of_depths.md  06_arora_2024_zoology_based.md  07_waleffe_2024_mamba_scaling.md  08_fedus_2022_switch_transformer.md  09_deepseek_2024_v3.md  10_peng_2024_rwkv7.md  README.md  _TEMPLATE.md
eval/: __init__.py  mqar.py  routing_analysis.py
experiments/: nano_report.md
scripts/: check_param_counts.py  investigate_mqar_routing.py  smoke_train_nano.py
tests/: conftest.py  test_attention.py  test_baselines.py  test_block_shape.py  test_causal_consistency.py  test_eval.py  test_gpu_wrappers.py  test_profiling.py  test_router.py  test_site.py  test_ssm.py  test_synthetic.py  test_train.py
train/: __init__.py  train.py
