[project]
name = "chimera-lm"
version = "0.1.0"
description = "CHIMERA: Conditionally Hybrid Mixture of Exact and Recurrent Attention"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5",
    "einops>=0.8",
]

[project.optional-dependencies]
# GPU stack — install on H100 boxes only. Will fail to build on CPU-only / Windows.
gpu = [
    "triton>=3.0; platform_system != 'Windows'",
    "flash-attn>=2.6; platform_system != 'Windows'",
    "mamba-ssm>=2.2; platform_system != 'Windows'",
]
# Training stack — adds the bits not needed for unit tests.
train = [
    "hydra-core>=1.3",
    "datasets>=2.19",
    "wandb>=0.16",
    "transformers>=4.40",
]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "pyright>=1.1",
]
# GitHub Pages documentation site (mkdocs-material + plugins).
docs = [
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
    "pymdown-extensions>=10.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chimera"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["chimera", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
